--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">Quality, Passion and Fun</h2>
-            <p class="text-white-50">Weather on tour or fulfilling local sound needs in the Seattle/Tacoma area I bring qualified knowledge, experience and passion to make you sound great! I value honesty and communication as I tweak your sound to perfection and then I work with all members of the crew to create a hassle/stress free environment where everyone enjoys their job.</p>
+            <p class="text-white-50">Whether on tour or fulfilling local sound needs in the Seattle/Tacoma area I bring qualified knowledge, experience and passion to make you sound great! I value honesty and communication as I tweak your sound to perfection and then I work with all members of the crew to create a hassle/stress free environment where everyone enjoys their job.</p>
           </div>
         </div>
         
@@ -185,7 +185,7 @@
                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Phone</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">+1 (206) 239-8852</div>
+                <div class="small text-black-50">+1 (206) 239-8552</div>
               </div>
             </div>
           </div>
